<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.view.VideoPlayerActivity">

    <!-- PlayerView для відтворення відео -->
    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:use_controller="false"
        app:show_buffering="when_playing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/videoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <!-- Контрольна панель -->
        <include
            android:id="@+id/customControls"
            layout="@layout/custom_player_controls"
            android:layout_margin="18dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.media3.ui.PlayerView>

    <!-- Назва відео -->
    <TextView
        android:id="@+id/videoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/video_name"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/playerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ресурс -->
    <TextView
        android:id="@+id/videoResource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resource"
        android:textSize="14sp"
        android:textColor="@color/resource_color"
        app:layout_constraintTop_toBottomOf="@+id/videoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Опис відео -->
    <TextView
        android:id="@+id/videoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/videoResource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
